parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS term
Rule 2     expression -> term
Rule 3     term -> term TIMES factor
Rule 4     term -> term MINUS factor
Rule 5     term -> term DIVI factor
Rule 6     term -> factor
Rule 7     factor -> NUMBER
Rule 8     factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

DIVI                 : 5
LPAREN               : 8
MINUS                : 4
NUMBER               : 7
PLUS                 : 1
RPAREN               : 8
TIMES                : 3
error                : 

Nonterminals, with rules where they appear

expression           : 1 8 0
factor               : 3 4 5 6
term                 : 1 2 3 4 5

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . term
    (3) term -> . term TIMES factor
    (4) term -> . term MINUS factor
    (5) term -> . term DIVI factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    LPAREN          shift and go to state 3

    term                           shift and go to state 1
    expression                     shift and go to state 5
    factor                         shift and go to state 4

state 1

    (2) expression -> term .
    (3) term -> term . TIMES factor
    (4) term -> term . MINUS factor
    (5) term -> term . DIVI factor

    RPAREN          reduce using rule 2 (expression -> term .)
    PLUS            reduce using rule 2 (expression -> term .)
    $end            reduce using rule 2 (expression -> term .)
    TIMES           shift and go to state 8
    MINUS           shift and go to state 6
    DIVI            shift and go to state 7


state 2

    (7) factor -> NUMBER .

    TIMES           reduce using rule 7 (factor -> NUMBER .)
    MINUS           reduce using rule 7 (factor -> NUMBER .)
    DIVI            reduce using rule 7 (factor -> NUMBER .)
    PLUS            reduce using rule 7 (factor -> NUMBER .)
    $end            reduce using rule 7 (factor -> NUMBER .)
    RPAREN          reduce using rule 7 (factor -> NUMBER .)


state 3

    (8) factor -> LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . term
    (3) term -> . term TIMES factor
    (4) term -> . term MINUS factor
    (5) term -> . term DIVI factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    LPAREN          shift and go to state 3

    term                           shift and go to state 1
    expression                     shift and go to state 9
    factor                         shift and go to state 4

state 4

    (6) term -> factor .

    TIMES           reduce using rule 6 (term -> factor .)
    MINUS           reduce using rule 6 (term -> factor .)
    DIVI            reduce using rule 6 (term -> factor .)
    RPAREN          reduce using rule 6 (term -> factor .)
    PLUS            reduce using rule 6 (term -> factor .)
    $end            reduce using rule 6 (term -> factor .)


state 5

    (0) S' -> expression .
    (1) expression -> expression . PLUS term

    PLUS            shift and go to state 10


state 6

    (4) term -> term MINUS . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    LPAREN          shift and go to state 3

    factor                         shift and go to state 11

state 7

    (5) term -> term DIVI . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    LPAREN          shift and go to state 3

    factor                         shift and go to state 12

state 8

    (3) term -> term TIMES . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    LPAREN          shift and go to state 3

    factor                         shift and go to state 13

state 9

    (8) factor -> LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term

    RPAREN          shift and go to state 14
    PLUS            shift and go to state 10


state 10

    (1) expression -> expression PLUS . term
    (3) term -> . term TIMES factor
    (4) term -> . term MINUS factor
    (5) term -> . term DIVI factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    LPAREN          shift and go to state 3

    term                           shift and go to state 15
    factor                         shift and go to state 4

state 11

    (4) term -> term MINUS factor .

    TIMES           reduce using rule 4 (term -> term MINUS factor .)
    MINUS           reduce using rule 4 (term -> term MINUS factor .)
    DIVI            reduce using rule 4 (term -> term MINUS factor .)
    RPAREN          reduce using rule 4 (term -> term MINUS factor .)
    PLUS            reduce using rule 4 (term -> term MINUS factor .)
    $end            reduce using rule 4 (term -> term MINUS factor .)


state 12

    (5) term -> term DIVI factor .

    TIMES           reduce using rule 5 (term -> term DIVI factor .)
    MINUS           reduce using rule 5 (term -> term DIVI factor .)
    DIVI            reduce using rule 5 (term -> term DIVI factor .)
    RPAREN          reduce using rule 5 (term -> term DIVI factor .)
    PLUS            reduce using rule 5 (term -> term DIVI factor .)
    $end            reduce using rule 5 (term -> term DIVI factor .)


state 13

    (3) term -> term TIMES factor .

    TIMES           reduce using rule 3 (term -> term TIMES factor .)
    MINUS           reduce using rule 3 (term -> term TIMES factor .)
    DIVI            reduce using rule 3 (term -> term TIMES factor .)
    RPAREN          reduce using rule 3 (term -> term TIMES factor .)
    PLUS            reduce using rule 3 (term -> term TIMES factor .)
    $end            reduce using rule 3 (term -> term TIMES factor .)


state 14

    (8) factor -> LPAREN expression RPAREN .

    TIMES           reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    DIVI            reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    $end            reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 8 (factor -> LPAREN expression RPAREN .)


state 15

    (1) expression -> expression PLUS term .
    (3) term -> term . TIMES factor
    (4) term -> term . MINUS factor
    (5) term -> term . DIVI factor

    RPAREN          reduce using rule 1 (expression -> expression PLUS term .)
    PLUS            reduce using rule 1 (expression -> expression PLUS term .)
    $end            reduce using rule 1 (expression -> expression PLUS term .)
    TIMES           shift and go to state 8
    MINUS           shift and go to state 6
    DIVI            shift and go to state 7

